Fix for nav alignment issues

--- a/jekyll/css/justified-nav.css
+++ b/jekyll/css/justified-nav.css
@@ -2,6 +2,10 @@ body {
   padding-top: 20px;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .footer {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -86,3 +90,5 @@ body {
     padding-left: 0;
   }
 }
+
+
